// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react:stories for libraries should create the stories with interaction tests 1`] = `
"import type { Meta, StoryObj } from '@storybook/react-vite';
import { TestUiLib } from './test-ui-lib';
import { expect } from 'storybook/test';

const meta = {
  component: TestUiLib,
  title: 'TestUiLib',
} satisfies Meta<typeof TestUiLib>;
export default meta;

type Story = StoryObj<typeof TestUiLib>;

export const Primary = {
  args: {},
} satisfies Story;

export const Heading = {
  args: {},
  play: async ({ canvas }) => {
    await expect(canvas.getByText(/TestUiLib/gi)).toBeTruthy();
  },
} satisfies Story;
"
`;

exports[`react:stories for libraries should create the stories with interaction tests 2`] = `
"import type { Meta, StoryObj } from '@storybook/react-vite';
import { Test } from './another-cmp';
import { expect } from 'storybook/test';

const meta = {
  component: Test,
  title: 'Test',
} satisfies Meta<typeof Test>;
export default meta;

type Story = StoryObj<typeof Test>;

export const Primary = {
  args: {
    name: '',
    displayAge: false,
  },
} satisfies Story;

export const Heading = {
  args: {
    name: '',
    displayAge: false,
  },
  play: async ({ canvas }) => {
    await expect(canvas.getByText(/Test/gi)).toBeTruthy();
  },
} satisfies Story;
"
`;

exports[`react:stories for libraries should create the stories without interaction tests 1`] = `
"import type { Meta, StoryObj } from '@storybook/react-vite';
import { TestUiLib } from './test-ui-lib';

const meta = {
  component: TestUiLib,
  title: 'TestUiLib',
} satisfies Meta<typeof TestUiLib>;
export default meta;

type Story = StoryObj<typeof TestUiLib>;

export const Primary = {
  args: {},
} satisfies Story;
"
`;

exports[`react:stories for libraries should create the stories without interaction tests 2`] = `
"import type { Meta, StoryObj } from '@storybook/react-vite';
import { Test } from './another-cmp';

const meta = {
  component: Test,
  title: 'Test',
} satisfies Meta<typeof Test>;
export default meta;

type Story = StoryObj<typeof Test>;

export const Primary = {
  args: {
    name: '',
    displayAge: false,
  },
} satisfies Story;
"
`;
